--- a/api/vercel.json
+++ b/api/vercel.json
@@ -2,19 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/index.js",
+      "src": "index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "api/index.js"
+      "dest": "index.js"
     }
-  ],
-  "functions": {
-    "api/index.js": {
-      "maxDuration": 30 
-    }
-  }
+  ]
 }
