--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,14 +1,14 @@
 {
   "version": 2,
   "functions": {
-    "api/index.js": {
+    "/index.js": {
       "maxDuration": 30 
     }
   },
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "api/index.js"
+      "dest": "/index.js"
     }
   ]
 }
