--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,9 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
@@ -11,7 +14,7 @@
     "@testing-library/user-event": "^12.7.1",
     "axios": "^1.7.2",
     "bootstrap": "^5.0.2",
-    "dotenv": "^8.2.0",
+    "dotenv": "^16.4.5",
     "firebase": "^8.4.2",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
@@ -28,16 +31,20 @@
     "web-vitals": "^1.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject"
+},
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "no-unused-vars": "warn",
+      "react-hooks/exhaustive-deps": "warn"
+    }
   },
   "browserslist": {
     "production": [
@@ -52,6 +59,8 @@
     ]
   },
   "devDependencies": {
-    "@svgr/cli": "^8.1.0"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@svgr/cli": "^8.1.0",
+    "cross-env": "^7.0.3"
   }
 }
