--- a/client/package.json
+++ b/client/package.json
@@ -6,29 +6,29 @@
     "node": "16.x"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/react-fontawesome": "^0.1.14",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.7.1",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
     "axios": "^1.7.2",
-    "bootstrap": "^5.0.2",
+    "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
-    "firebase": "^8.4.2",
-    "jwt-decode": "^3.1.2",
-    "react": "^17.0.1",
-    "react-bootstrap": "^2.0.0-beta.4",
-    "react-calendar": "^3.4.0",
-    "react-dom": "^17.0.1",
-    "react-hook-form": "^7.3.4",
-    "react-hot-toast": "^2.1.0",
-    "react-icons": "^4.2.0",
-    "react-modal": "^3.13.1",
-    "react-router-dom": "^6.4.3",
+    "firebase": "^10.12.2",
+    "jwt-decode": "^4.0.0",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.2",
+    "react-calendar": "^5.0.0",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "sweetalert": "^2.1.2",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^4.1.1"
   },
   "scripts": {
   "start": "react-scripts start",
