--- a/client/vercel.json
+++ b/client/vercel.json
@@ -3,13 +3,13 @@
   "builds": [
     {
       "src": "package.json",
-      "use": "@vercel/static-build"
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "build"
+      }
     }
   ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
-    }
-  ]
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
